Fix single video in video tutorials sidebox shows extra spaces at top and bottom

--- a/pixelegg/css/mobile.css
+++ b/pixelegg/css/mobile.css
@@ -2194,7 +2194,6 @@ body {
  * @package pixelegg
  * @version $Id$
  */
-@import-once "def_colors.less";
 #socialMedia {
   position: relative;
   bottom: 20px;
@@ -4272,7 +4271,7 @@ td.message span.message {
   text-decoration: none;
   height: 32px;
   /*font-size: 1.1em;*/
-  font-size: 12.100000000000001px;
+  font-size: 12.1px;
   line-height: 1.5em;
 }
 #egw_fw_header #egw_fw_topmenu #egw_fw_topmenu_items ul li a:hover {
@@ -4296,7 +4295,7 @@ td.message span.message {
 }
 #egw_fw_header #egw_fw_topmenu #egw_fw_topmenu_items ul a#topmenu_home:before {
   padding-right: 20px;
-  font-size: 12.100000000000001px;
+  font-size: 12.1px;
   content: " ";
   background-image: url(../images/topmenu_items/home.png);
   background-repeat: no-repeat;
@@ -4692,7 +4691,7 @@ td.message span.message {
   padding-left: 3em;
   color: #999999;
   /*font-size: 12px;*/
-  font-size: 12.100000000000001px;
+  font-size: 12.1px;
   line-height: 17px;
 }
 #egw_fw_sidebar #egw_fw_sidemenu .egw_fw_ui_scrollarea_outerdiv .egw_fw_ui_sidemenu_entry_header object {
@@ -4864,7 +4863,7 @@ td.message span.message {
   margin: 5px 0px 3px 5px;
   padding: 0px 0px 0px 15px;
   line-height: 1em;
-  font-size: 12.100000000000001px;
+  font-size: 12.1px;
   background-image: url(../images/arrow_left.png);
   background-repeat: no-repeat;
   background-position: left center;
@@ -6435,6 +6434,10 @@ span.egw_tutorial_title {
 [id^="egw_tutorial_"][id$="sidebox_list"] {
   overflow-x: hidden;
   overflow-y: auto;
+  max-height: 200px;
+}
+#list_grid_wrapper {
+  max-height: 200px;
 }
 #home-tutorial_list {
   float: left;
@@ -7058,7 +7061,7 @@ span.egw_tutorial_title {
     margin: 5px 0px 3px 5px;
     padding: 0px 0px 0px 15px;
     line-height: 1em;
-    font-size: 12.100000000000001px;
+    font-size: 12.1px;
     background-image: url(../images/arrow_left.png);
     background-repeat: no-repeat;
     background-position: left center;
